# guardai

./: .gitignore  Dockerfile  email_cli.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: index.py
data/: inbox.json
landing/: index.html
src/: __init__.py  cli.py  email_service.py  engine.py
src/api/: app.py
src/scanners/: __init__.py  auth.py  base.py  dependency.py  injection.py  secrets.py  xss.py
static/css/: style.css
templates/: dashboard.html  results.html
tests/: test_scanners.py
