[project]
name = "guardai"
version = "0.1.0"
description = "AI Code Security Scanner - Catch vulnerabilities in AI-generated code before they ship"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
guardai = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
